--- a/myweb.html
+++ b/myweb.html
@@ -8,80 +8,89 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- JSON-LD -->
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Muhamad Furqon Alfabiansyah",
-        "alternateName": "Furqonisme",
-        "slogan": "Ad Maiora Natus Sum",
-        "birthDate": "2003-01-13",
-        "birthPlace": "Serang, Banten, Indonesia",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Kopo",
-          "addressLocality": "Serang",
-          "addressRegion": "Banten",
-          "addressCountry": "Indonesia"
-        },
-        "gender": "Male",
-        "religion": "Islam",
-        "nationality": "Indonesian",
-        "maritalStatus": "Single",
-        "alumniOf": [
-          {
-            "@type": "EducationalOrganization",
-            "name": "SDN Nanggung 2",
-            "startDate": "2009",
-            "endDate": "2015"
-          },
-          {
-            "@type": "EducationalOrganization",
-            "name": "MTS Darrul Hikmah",
-            "startDate": "2015",
-            "endDate": "2018"
-          },
-          {
-            "@type": "EducationalOrganization",
-            "name": "SMK Hikmatul Iman",
-            "startDate": "2018",
-            "endDate": "2021"
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Muhamad Furqon Alfabiansyah",
+            "alternateName": "Furqonisme",
+            "description": "Ad Maiora Natus Sum",
+            "gender": "Male",
+            "birthDate": "2003-01-13",
+            "birthPlace": "Serang, Banten, Indonesia",
+            "address": {
+              "@type": "PostalAddress",
+              "addressLocality": "Kopo",
+              "addressRegion": "Serang-Banten",
+              "addressCountry": "Indonesia"
+            },
+            "nationality": "Indonesian",
+            "maritalStatus": "Single",
+            "alumniOf": [
+              {
+                "@type": "EducationalOrganization",
+                "name": "SDN Nanggung 2",
+                "startDate": "2009",
+                "endDate": "2015"
+              },
+              {
+                "@type": "EducationalOrganization",
+                "name": "MTS Darrul Hikmah",
+                "startDate": "2015",
+                "endDate": "2018"
+              },
+              {
+                "@type": "EducationalOrganization",
+                "name": "SMK Hikmatul Iman",
+                "startDate": "2018",
+                "endDate": "2021"
+              }
+            ],
+            "affiliation": [
+              {
+                "@type": "Organization",
+                "name": "PMII (Pergerakan Mahasiswa Islam Indonesia)"
+              },
+              {
+                "@type": "Organization",
+                "name": "HIMAKOM (Himpunan Mahasiswa Komputer)"
+              }
+            ],
+            "worksFor": {
+              "@type": "Organization",
+              "name": "Badan Pusat Statistik (BPS)",
+              "jobTitle": "Petugas Lapangan"
+            },
+            "knowsAbout": [
+              "Leadership",
+              "Collaboration"
+            ],
+            "contactPoint": {
+              "@type": "ContactPoint",
+              "telephone": "+62 814-0064-7397",
+              "email": "furqonisme130103@gmail.com",
+              "url": "https://www.reallygreatsite.com"
+            },
+            "sameAs": [
+              "https://instagram.com/furqonismee"
+            ],
+            "memberOf": {
+              "@type": "EducationalOrganization",
+              "name": "Universitas Yatsi Madani",
+              "department": {
+                "@type": "CollegeOrUniversity",
+                "name": "Fakultas Teknologi dan Bisnis",
+                "department": {
+                  "@type": "CollegeOrUniversity",
+                  "name": "Ilmu Komputer",
+                  "program": "Ilmu Komputer A Tigaraksa",
+                  "identifier": "23050455"
+                }
+              }
+            },
+            "hasOccupation": "Student",
+            "hobby": ["Travelling", "Watching One Piece"]
           }
-        ],
-        "worksFor": [
-          {
-            "@type": "Organization",
-            "name": "BPS",
-            "roleName": "Petugas Lapangan"
-          }
-        ],
-        "memberOf": [
-          {
-            "@type": "Organization",
-            "name": "PMII (Pergerakan Mahasiswa Islam Indonesia)"
-          },
-          {
-            "@type": "Organization",
-            "name": "HIMAKOM (Himpunan Mahasiswa Komputer)"
-          }
-        ],
-        "knowsAbout": [
-          "Leadership",
-          "Collaboration"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+62-814-0064-7397",
-          "email": "furqonisme130103@gmail.com",
-          "url": "https://www.reallygreatsite.com",
-          "sameAs": [
-            "https://www.instagram.com/furqonismee"
-          ]
-        },
-        "hobby": [
-          "Travelling",
-          "Watching One Piece"
-        ]
-      }
+          
       </script>
 
     <style>
